--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Mako&family=Wix+Madefor+Display:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Mako&family=Wix+Madefor+Display:wght@500&display=swap");
 
 :root {
   --darkerColor: #333333;
@@ -15,9 +15,10 @@
 }
 
 body {
-  background-color: var(--darkerColor);
-  color: var(--lightColor);
-  font-family: 'Wix Madefor Display', sans-serif;
+  background-color: var(--lightColor);
+  color: var(--darkColor);
+  font-family: "Wix Madefor Display", sans-serif;
+  overflow-x: hidden;
 }
 
 #grid-container {
@@ -63,9 +64,9 @@ h1 {
   color: var(--lightColor);
   font-size: larger;
   font-weight: 400;
-  font-family: 'Anton', sans-serif;
+  font-family: "Anton", sans-serif;
   letter-spacing: 2px;
-  transition: all 0.3s;
+  
 }
 
 .button:hover {
@@ -73,8 +74,8 @@ h1 {
 }
 
 .bigify {
-    transform: scale(1.5);
-    transition: all .5s; 
+  transform: scale(1.5);
+  transition: all 0.7s;
 }
 
 .redify {
@@ -83,26 +84,30 @@ h1 {
   color: var(--panelColor);
 }
 
-.little {
-    height: min-content;
-    padding: 5px 5px;
-    position: absolute;
-    right: 5px;
-    bottom: 0px;
-}
-
-
 #timerContainer {
-    background-color: var(--accentColor);
-    border-radius: 50%;
-    padding: 3vw;
-    z-index: 1;
-    font-size: 62px;
-    transition: all .5s; 
+  display: flex;
+  background-color: var(--accentColor);
+  border-radius: 50%;
+  padding: 3vh;
+  z-index: 1;
+  font-size: 62px;
+  transition: all 0.5s;
+  width: 120px;
+  height: 120px;
+  justify-content: center;
+  align-items: center;
 }
 
 #scoreContainer {
-    font-size: xx-large;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: xx-large;
+}
+
+#scoreBuzzer {
+  font-size: xxx-large;
+  opacity: 1;
 }
 
 #footer {
@@ -116,14 +121,17 @@ h1 {
 
 #aside {
   grid-area: aside;
+  display: flex;
   background-color: var(--darkColor);
   color: var(--lightColor);
   padding: 8px;
   flex: auto;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #highScores {
-  font-family: 'Anton', sans-serif;
+  font-family: "Anton", sans-serif;
   width: 100%;
   border-collapse: collapse;
   letter-spacing: 2px;
@@ -150,15 +158,17 @@ h1 {
 #question {
   display: flex;
   padding: 1.5rem;
-
+  align-items: center;
+  justify-content: center;
   width: 100%;
 }
 
 #question h3 {
-  font-size: x-large;
+  font-size: xx-large;
 }
 
 #answerText {
+  display: none;
 }
 
 #answerText ol {
@@ -171,34 +181,37 @@ h1 {
   padding: 0.5rem;
 }
 
-#answers {
+#choices {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  flex-direction: column;
   padding: 1.5rem;
   width: 100%;
   justify-content: space-around;
   background-color: var(--lightColor);
   color: var(--darkerColor);
-  max-height: 150px;
+
+  overflow: hidden;
 }
 
-.answer {
-  border-radius: 50%;
+.choice {
+  border-radius: 30px;
   padding: 10px 30px;
-  font-size: xxx-large;
-  max-height: 90px;
-  
+  font-size: xx-large;
+  transform: none;
 }
 
-.answer:hover {
+.choice:hover {
   transform: scale(1.2);
 }
 
 #timerDisplay {
+  color: var(--lightColor);
   padding: 15px;
 }
 
 #scoreDisplay {
+  font-size: xxx-large;
   padding: 15px;
 }
 
@@ -255,10 +268,29 @@ h1 {
     flex-wrap: wrap;
   }
   #timerContainer {
+    font-size: xx-large;
+  }
 
-    position: absolute;
-    top: 100px;
+  #header {
+    height: 10vh;
+  }
+
+  #choices {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .choice {
+    padding: 10px 30px;
+    font-size: xxx-large;
+    max-height: 90px;
+    width: 100%;
+    max-width: 90%;
     font-size: large;
   }
 
+  #scoreContainer {
+    font-size: medium;
+    flex-direction: column-reverse;
+  }
 }
