--- a/assets/style.css
+++ b/assets/style.css
@@ -256,7 +256,9 @@ h1 {
   top: 25vh;
   transform: translate(-50%);
   background-color: transparent;
+  color: var(--lightColor);
   border: none;
+  overflow: hidden;
 }
 
 #titleScreen button {
@@ -265,6 +267,12 @@ h1 {
   color: var(--lightColor);
   border-radius: 16px;
   padding: 10px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+#titleScreen table {
+  background-color: var(--darkColor);
 }
 
 #titleScreen::backdrop, #gameOverDialog::backdrop {
