Revert "fixed css and fade function"
This reverts commit c81ade2f7bc0b917c0239d12f96a6fa07e939839.

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,12 +22,14 @@ body {
 }
 
 #grid-container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-areas:
+    "header header header"
+    "main main aside"
+    "footer footer footer";
   grid-template-columns: 10% 65% 25%;
   grid-template-rows: 13% 80% 7%;
   min-height: 100vh;
-
 }
 
 #header {
@@ -38,7 +40,6 @@ body {
   justify-content: space-between;
   width: 100%;
   overflow: hidden;
-  height: 10vh;
 }
 
 h1 {
@@ -105,11 +106,8 @@ h1 {
 }
 
 #scoreBuzzer {
-  display: flex;
-  flex: 1 0;
   font-size: xxx-large;
   opacity: 1;
-  justify-content: center;
 }
 
 #footer {
@@ -257,18 +255,17 @@ h1 {
   left: 50vw;
   top: 25vh;
   transform: translate(-50%);
-  background-color:unset;
+  background-color: transparent;
   color: var(--lightColor);
-  border: transparent;
-
+  border: none;
+  overflow: hidden;
 }
 
 #titleScreen button {
   font-size: xx-large;
   background-color: var(--darkColor);
   color: var(--lightColor);
-  border-radius: 30px;
-  border: none;
+  border-radius: 16px;
   padding: 10px;
   width: 100%;
   margin-bottom: 15px;
@@ -299,7 +296,9 @@ h1 {
     font-size: xx-large;
   }
 
-
+  #header {
+    height: 10vh;
+  }
 
   #choices {
     flex-direction: row;
@@ -307,7 +306,6 @@ h1 {
   }
 
   .choice {
-    border: 2px solid var(--darkerColor);
     padding: 10px 30px;
     font-size: xxx-large;
     max-height: 90px;
